# AConn

./: .gitmodules  CMakeLists.txt
include/: Sound.hpp  anony.hpp  client.hpp  client_codec.hpp  codec.hpp  config.hpp  cursor.hpp  packet.hpp  ringbuffer.hpp  server.hpp  socket.hpp  sound.hpp  sound_file.hpp  utils.hpp  wavefile.hpp
src/: aconn_client.cpp  aconn_client_anony.cpp  aconn_client_codec.cpp  aconn_client_listener.cpp  aconn_client_opus.cpp  aconn_client_speaker.cpp  aconn_recorder.cpp  aconn_server.cpp  list_devices.cpp  record_playback.cpp  test_opus.cpp  test_opus_sound.cpp  test_ringbuffer.cpp  udp_client.cpp  udp_client_test.cpp  udp_server.cpp  udp_server_test.cpp
